--- a/0 - Introduccion a Python/6 - POO/ejercicio.ipynb
+++ b/0 - Introduccion a Python/6 - POO/ejercicio.ipynb
@@ -181,14 +181,80 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "AqsiSfYEtOJJ"
       },
       "outputs": [],
       "source": [
+        "class Rectangulo:\n",
+        "  def __init__(self, base, altura):\n",
+        "    self._base = base\n",
+        "    self._altura = altura\n",
+        "\n",
+        "  def area(self):\n",
+        "    return self._base * self._altura\n",
+        "\n",
+        "  def base(self):\n",
+        "    return self._base\n",
+        "\n",
+        "class Cuadrado(Rectangulo):\n",
+        "  def __init__(self, lado):\n",
+        "    super().__init__(lado, lado)\n",
+        "\n",
+        "class Cubo(Cuadrado):\n",
+        "  def __init__(self, lado):\n",
+        "    self._alto = lado\n",
+        "    super().__init__(lado)\n",
+        "\n",
+        "  def volumen(self):\n",
+        "    return self._alto**3\n",
+        "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cubo = Cubo(2)"
+      ],
+      "metadata": {
+        "id": "h5Ma0Ywad9m_"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(cubo.volumen())"
+      ],
+      "metadata": {
+        "id": "Mo09c5w-e-Jg",
+        "outputId": "40ea21ae-9415-4296-875d-37d01d4e8978",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4iIO1M1jfJx5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
